// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`records open in the real right sidebar, remain session scoped, and leave runtime independent on display unload > composer entry and right sidebar records 1`] = `
<div>
  <div
    data-slot="root"
    style="display: contents;"
  >
    <div
      data-surface="composer"
    >
      <div
        data-surface="toolbar"
      >
        <div
          data-slot="conversation.input.right"
          style="display: contents;"
        >
          <div
            data-care-entry=""
          >
            <style>
              [data-care-panel], [data-care-entry], [data-context-care] {
  font-family: inherit;
  font-size: var(--dsh-content-font-size-secondary, 13px);
  line-height: calc(20px + var(--dsh-content-font-delta-secondary, 0px));
  font-variant-numeric: tabular-nums;
  color: var(--dsw-alias-label-secondary);
}
[data-care-entry] { display: inline-flex; align-items: center; position: relative; flex: none; }
[data-care-panel] { display: flex; flex-direction: column; height: 100%; min-height: 0; box-sizing: border-box; }
[data-care-panel] h3, [data-care-panel] h4 { margin: 0; font-size: inherit; font-weight: 500; color: var(--dsw-alias-label-primary); }
[data-care-panel] header { display: flex; align-items: center; justify-content: space-between; gap: 12px; padding: 16px; border-bottom: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] main { flex: 1; min-height: 0; overflow: auto; padding: 16px; scrollbar-width: thin; scrollbar-color: var(--dsw-alias-scrollbar-bg-l2) transparent; }
[data-care-panel] footer { display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 8px; padding: 12px 16px; border-top: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] button, [data-care-entry] button {
  display: inline-flex; align-items: center; justify-content: center; flex: none;
  gap: 6px; box-sizing: border-box; min-height: 28px; padding: 3px 10px;
  appearance: none; border: 0; border-radius: var(--dsw-radius-sm);
  background: transparent; color: var(--dsw-alias-label-secondary); font: inherit; cursor: pointer;
}
[data-care-entry] button { width: 28px; height: 28px; padding: 4px; }
[data-care-panel] button:hover:not(:disabled), [data-care-entry] button:hover { background: var(--dsw-alias-interactive-bg-hover); color: var(--dsw-alias-label-primary); }
[data-care-panel] button:active:not(:disabled), [data-care-entry] button:active { background: var(--dsw-alias-interactive-bg-active); }
[data-care-panel] button:disabled { opacity: .4; cursor: not-allowed; }
[data-care-panel] button:focus-visible, [data-care-panel] summary:focus-visible, [data-care-entry] button:focus-visible {
  outline: var(--dsw-focus-ring-width, 2px) solid var(--dsw-focus-ring-color, var(--dsw-alias-state-business-primary)); outline-offset: 2px;
}
[data-care-panel] .care-budget { padding: 16px; margin-bottom: 12px; border-radius: var(--dsw-radius-md); background: var(--dsw-alias-bg-layer-2); border: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] .care-budget-heading, [data-care-panel] .care-section-heading { display: flex; align-items: center; justify-content: space-between; gap: 12px; margin-bottom: 12px; }
[data-care-panel] .care-figures { display: flex; align-items: baseline; flex-wrap: wrap; gap: 6px; margin: 8px 0; }
[data-care-panel] .care-figures strong { font-size: calc(var(--dsh-content-font-size, 14px) + 10px); line-height: 1.4; font-weight: 500; color: var(--dsw-alias-label-primary); }
[data-care-panel] .care-meter { height: 4px; margin: 12px 0; border-radius: var(--dsw-radius-xs); overflow: hidden; background: var(--dsw-alias-interactive-bg-hover); }
[data-care-panel] .care-meter &gt; span { display: block; height: 100%; width: var(--care-fill); background: var(--dsw-alias-state-business-primary); }
[data-care-panel] .care-meter[data-over-limit] &gt; span { background: var(--dsw-alias-state-error-primary); }
[data-care-panel] .care-muted { color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-route { overflow-wrap: anywhere; margin-top: 8px; }
[data-care-panel] dl { display: grid; grid-template-columns: minmax(100px, 1fr) minmax(0, 1.4fr); column-gap: 12px; row-gap: 8px; margin: 12px 0 0; }
[data-care-panel] dt { color: var(--dsw-alias-label-tertiary); }
[data-care-panel] dd { margin: 0; min-width: 0; overflow-wrap: anywhere; }
[data-care-panel] .care-technical { margin-bottom: 24px; }
[data-care-panel] summary { cursor: pointer; border-radius: var(--dsw-radius-sm); }
[data-care-panel] .care-technical &gt; summary { padding: 6px 8px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] summary:hover { background: var(--dsw-alias-interactive-bg-hover); }
[data-care-panel] .care-action { border-top: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] .care-action &gt; summary { display: grid; grid-template-columns: 16px minmax(0, 1fr); align-items: start; gap: 8px; list-style: none; padding: 12px 8px; }
[data-care-panel] .care-action &gt; summary::-webkit-details-marker { display: none; }
[data-care-panel] .care-chevron { margin-top: 3px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-action[open] .care-chevron { transform: rotate(90deg); }
[data-care-panel] .care-action-title { display: flex; flex-wrap: wrap; align-items: center; gap: 8px; color: var(--dsw-alias-label-primary); }
[data-care-panel] .care-action-time { margin-left: auto; color: var(--dsw-alias-label-tertiary); font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); }
[data-care-panel] .care-action-change { display: block; margin-top: 4px; color: var(--dsw-alias-label-secondary); }
[data-care-panel] .care-action dl { margin: 0 8px 16px 32px; }
[data-care-panel] .care-badge { display: inline-flex; align-items: center; gap: 4px; font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-badge::before { content: ''; width: 5px; height: 5px; border-radius: 50%; corner-shape: round; background: currentColor; }
[data-care-panel] .care-badge[data-tone='success'] { color: var(--dsw-alias-state-success-primary); }
[data-care-panel] .care-badge[data-tone='error'] { color: var(--dsw-alias-state-error-primary); }
[data-care-panel] .care-badge[data-tone='working'] { color: var(--dsw-alias-state-business-primary); }
[data-care-panel] .care-badge[data-tone='warning'] { color: var(--dsw-alias-state-warn-label); }
[data-care-panel] .care-prompt-detail { margin: 0 8px 16px 32px; min-width: 0; }
[data-care-panel] .care-prompt-detail section { margin-top: 16px; }
[data-care-panel] .care-prompt-text { white-space: pre-wrap; overflow-wrap: anywhere; font: inherit; color: var(--dsw-alias-label-primary); padding: 10px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-bg-layer-2); }
[data-care-panel] .care-empty { margin: 0; padding: 24px 8px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] [role='alert'] { padding: 12px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-interactive-bg-hover-danger); color: var(--dsw-alias-state-error-primary); overflow-wrap: anywhere; }
[data-care-entry] [role='alert'] { position: absolute; bottom: calc(100% + 8px); right: 0; width: 240px; padding: 12px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-bg-layer-2); color: var(--dsw-alias-state-error-primary); box-shadow: var(--dsw-elevation-panel); overflow-wrap: anywhere; z-index: 1; }
[data-context-care] { display: flex; flex-wrap: wrap; align-items: center; gap: 12px; padding: 1px 4px; font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); }
[data-context-care] &gt; span { font-weight: 500; }
            </style>
            <button
              aria-label="预算与维护记录"
              title="在右侧栏打开预算与维护记录"
              type="button"
            >
              <svg
                aria-hidden="true"
                data-content="1f2e3820"
                fill="none"
                focusable="false"
                height="20"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                width="20"
              />
            </button>
            <button
              aria-label="提示详情与溯源"
              title="在右侧栏查看所有上下文照料提示"
              type="button"
            >
              <svg
                aria-hidden="true"
                data-content="8054bd6b"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                width="20"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        data-surface="status"
      >
        <div
          data-slot="conversation.composer.dock"
          style="display: contents;"
        >
          <div
            data-context-care=""
            role="status"
            title="最近一次请求准备时的负荷与保留信息量估算；不是记忆可靠性判断，也不是任务时限。"
          >
            <style>
              [data-care-panel], [data-care-entry], [data-context-care] {
  font-family: inherit;
  font-size: var(--dsh-content-font-size-secondary, 13px);
  line-height: calc(20px + var(--dsh-content-font-delta-secondary, 0px));
  font-variant-numeric: tabular-nums;
  color: var(--dsw-alias-label-secondary);
}
[data-care-entry] { display: inline-flex; align-items: center; position: relative; flex: none; }
[data-care-panel] { display: flex; flex-direction: column; height: 100%; min-height: 0; box-sizing: border-box; }
[data-care-panel] h3, [data-care-panel] h4 { margin: 0; font-size: inherit; font-weight: 500; color: var(--dsw-alias-label-primary); }
[data-care-panel] header { display: flex; align-items: center; justify-content: space-between; gap: 12px; padding: 16px; border-bottom: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] main { flex: 1; min-height: 0; overflow: auto; padding: 16px; scrollbar-width: thin; scrollbar-color: var(--dsw-alias-scrollbar-bg-l2) transparent; }
[data-care-panel] footer { display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 8px; padding: 12px 16px; border-top: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] button, [data-care-entry] button {
  display: inline-flex; align-items: center; justify-content: center; flex: none;
  gap: 6px; box-sizing: border-box; min-height: 28px; padding: 3px 10px;
  appearance: none; border: 0; border-radius: var(--dsw-radius-sm);
  background: transparent; color: var(--dsw-alias-label-secondary); font: inherit; cursor: pointer;
}
[data-care-entry] button { width: 28px; height: 28px; padding: 4px; }
[data-care-panel] button:hover:not(:disabled), [data-care-entry] button:hover { background: var(--dsw-alias-interactive-bg-hover); color: var(--dsw-alias-label-primary); }
[data-care-panel] button:active:not(:disabled), [data-care-entry] button:active { background: var(--dsw-alias-interactive-bg-active); }
[data-care-panel] button:disabled { opacity: .4; cursor: not-allowed; }
[data-care-panel] button:focus-visible, [data-care-panel] summary:focus-visible, [data-care-entry] button:focus-visible {
  outline: var(--dsw-focus-ring-width, 2px) solid var(--dsw-focus-ring-color, var(--dsw-alias-state-business-primary)); outline-offset: 2px;
}
[data-care-panel] .care-budget { padding: 16px; margin-bottom: 12px; border-radius: var(--dsw-radius-md); background: var(--dsw-alias-bg-layer-2); border: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] .care-budget-heading, [data-care-panel] .care-section-heading { display: flex; align-items: center; justify-content: space-between; gap: 12px; margin-bottom: 12px; }
[data-care-panel] .care-figures { display: flex; align-items: baseline; flex-wrap: wrap; gap: 6px; margin: 8px 0; }
[data-care-panel] .care-figures strong { font-size: calc(var(--dsh-content-font-size, 14px) + 10px); line-height: 1.4; font-weight: 500; color: var(--dsw-alias-label-primary); }
[data-care-panel] .care-meter { height: 4px; margin: 12px 0; border-radius: var(--dsw-radius-xs); overflow: hidden; background: var(--dsw-alias-interactive-bg-hover); }
[data-care-panel] .care-meter &gt; span { display: block; height: 100%; width: var(--care-fill); background: var(--dsw-alias-state-business-primary); }
[data-care-panel] .care-meter[data-over-limit] &gt; span { background: var(--dsw-alias-state-error-primary); }
[data-care-panel] .care-muted { color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-route { overflow-wrap: anywhere; margin-top: 8px; }
[data-care-panel] dl { display: grid; grid-template-columns: minmax(100px, 1fr) minmax(0, 1.4fr); column-gap: 12px; row-gap: 8px; margin: 12px 0 0; }
[data-care-panel] dt { color: var(--dsw-alias-label-tertiary); }
[data-care-panel] dd { margin: 0; min-width: 0; overflow-wrap: anywhere; }
[data-care-panel] .care-technical { margin-bottom: 24px; }
[data-care-panel] summary { cursor: pointer; border-radius: var(--dsw-radius-sm); }
[data-care-panel] .care-technical &gt; summary { padding: 6px 8px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] summary:hover { background: var(--dsw-alias-interactive-bg-hover); }
[data-care-panel] .care-action { border-top: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] .care-action &gt; summary { display: grid; grid-template-columns: 16px minmax(0, 1fr); align-items: start; gap: 8px; list-style: none; padding: 12px 8px; }
[data-care-panel] .care-action &gt; summary::-webkit-details-marker { display: none; }
[data-care-panel] .care-chevron { margin-top: 3px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-action[open] .care-chevron { transform: rotate(90deg); }
[data-care-panel] .care-action-title { display: flex; flex-wrap: wrap; align-items: center; gap: 8px; color: var(--dsw-alias-label-primary); }
[data-care-panel] .care-action-time { margin-left: auto; color: var(--dsw-alias-label-tertiary); font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); }
[data-care-panel] .care-action-change { display: block; margin-top: 4px; color: var(--dsw-alias-label-secondary); }
[data-care-panel] .care-action dl { margin: 0 8px 16px 32px; }
[data-care-panel] .care-badge { display: inline-flex; align-items: center; gap: 4px; font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-badge::before { content: ''; width: 5px; height: 5px; border-radius: 50%; corner-shape: round; background: currentColor; }
[data-care-panel] .care-badge[data-tone='success'] { color: var(--dsw-alias-state-success-primary); }
[data-care-panel] .care-badge[data-tone='error'] { color: var(--dsw-alias-state-error-primary); }
[data-care-panel] .care-badge[data-tone='working'] { color: var(--dsw-alias-state-business-primary); }
[data-care-panel] .care-badge[data-tone='warning'] { color: var(--dsw-alias-state-warn-label); }
[data-care-panel] .care-prompt-detail { margin: 0 8px 16px 32px; min-width: 0; }
[data-care-panel] .care-prompt-detail section { margin-top: 16px; }
[data-care-panel] .care-prompt-text { white-space: pre-wrap; overflow-wrap: anywhere; font: inherit; color: var(--dsw-alias-label-primary); padding: 10px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-bg-layer-2); }
[data-care-panel] .care-empty { margin: 0; padding: 24px 8px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] [role='alert'] { padding: 12px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-interactive-bg-hover-danger); color: var(--dsw-alias-state-error-primary); overflow-wrap: anywhere; }
[data-care-entry] [role='alert'] { position: absolute; bottom: calc(100% + 8px); right: 0; width: 240px; padding: 12px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-bg-layer-2); color: var(--dsw-alias-state-error-primary); box-shadow: var(--dsw-elevation-panel); overflow-wrap: anywhere; z-index: 1; }
[data-context-care] { display: flex; flex-wrap: wrap; align-items: center; gap: 12px; padding: 1px 4px; font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); }
[data-context-care] &gt; span { font-weight: 500; }
            </style>
            <span
              style="color: var(--dsw-alias-state-business-primary);"
            >
              疲劳度: 40% (正常)
            </span>
            <span
              style="color: var(--dsw-alias-state-success-secondary);"
            >
              唤醒值: 60% (较高)
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      data-slot="conversation.chat.node"
      style="display: contents;"
    >
      <div
        data-context-care-notice=""
        data-context-care-seq="4"
        style="border-left: 2px solid var(--dsw-alias-border-l3, rgba(127,127,127,.35)); background: var(--dsw-alias-bg-secondary, rgba(127,127,127,.06)); border-radius: var(--dsw-radius-md, 6px); padding: 8px 12px; margin: 8px 0px;"
      >
        <div
          style="display: flex; align-items: baseline; gap: 10px; flex-wrap: wrap; margin-bottom: 6px;"
        >
          <span
            style="font-size: var(--dsh-content-font-size-secondary, 13px); font-weight: 600; color: var(--dsw-alias-label-secondary);"
          >
            上下文照料 · 状态
          </span>
        </div>
        <div
          style="font-size: var(--dsh-content-font-size, 14px); line-height: 22px; color: var(--dsw-alias-label-primary); white-space: pre-wrap; word-break: break-word;"
        >
          Original notice
        </div>
        <button
          style="font: inherit; color: var(--dsw-alias-label-secondary); background: transparent; border: 0px; cursor: pointer; margin-top: 6px;"
          type="button"
        >
          详情与溯源
        </button>
      </div>
    </div>
    <aside
      data-surface="right-sidebar"
    >
      <div
        data-slot="sidebar.right.pane.tab"
        style="display: contents;"
      >
        <section
          aria-label="预算与维护记录"
          data-care-panel=""
          data-context-care-actions=""
        >
          <style>
            [data-care-panel], [data-care-entry], [data-context-care] {
  font-family: inherit;
  font-size: var(--dsh-content-font-size-secondary, 13px);
  line-height: calc(20px + var(--dsh-content-font-delta-secondary, 0px));
  font-variant-numeric: tabular-nums;
  color: var(--dsw-alias-label-secondary);
}
[data-care-entry] { display: inline-flex; align-items: center; position: relative; flex: none; }
[data-care-panel] { display: flex; flex-direction: column; height: 100%; min-height: 0; box-sizing: border-box; }
[data-care-panel] h3, [data-care-panel] h4 { margin: 0; font-size: inherit; font-weight: 500; color: var(--dsw-alias-label-primary); }
[data-care-panel] header { display: flex; align-items: center; justify-content: space-between; gap: 12px; padding: 16px; border-bottom: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] main { flex: 1; min-height: 0; overflow: auto; padding: 16px; scrollbar-width: thin; scrollbar-color: var(--dsw-alias-scrollbar-bg-l2) transparent; }
[data-care-panel] footer { display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 8px; padding: 12px 16px; border-top: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] button, [data-care-entry] button {
  display: inline-flex; align-items: center; justify-content: center; flex: none;
  gap: 6px; box-sizing: border-box; min-height: 28px; padding: 3px 10px;
  appearance: none; border: 0; border-radius: var(--dsw-radius-sm);
  background: transparent; color: var(--dsw-alias-label-secondary); font: inherit; cursor: pointer;
}
[data-care-entry] button { width: 28px; height: 28px; padding: 4px; }
[data-care-panel] button:hover:not(:disabled), [data-care-entry] button:hover { background: var(--dsw-alias-interactive-bg-hover); color: var(--dsw-alias-label-primary); }
[data-care-panel] button:active:not(:disabled), [data-care-entry] button:active { background: var(--dsw-alias-interactive-bg-active); }
[data-care-panel] button:disabled { opacity: .4; cursor: not-allowed; }
[data-care-panel] button:focus-visible, [data-care-panel] summary:focus-visible, [data-care-entry] button:focus-visible {
  outline: var(--dsw-focus-ring-width, 2px) solid var(--dsw-focus-ring-color, var(--dsw-alias-state-business-primary)); outline-offset: 2px;
}
[data-care-panel] .care-budget { padding: 16px; margin-bottom: 12px; border-radius: var(--dsw-radius-md); background: var(--dsw-alias-bg-layer-2); border: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] .care-budget-heading, [data-care-panel] .care-section-heading { display: flex; align-items: center; justify-content: space-between; gap: 12px; margin-bottom: 12px; }
[data-care-panel] .care-figures { display: flex; align-items: baseline; flex-wrap: wrap; gap: 6px; margin: 8px 0; }
[data-care-panel] .care-figures strong { font-size: calc(var(--dsh-content-font-size, 14px) + 10px); line-height: 1.4; font-weight: 500; color: var(--dsw-alias-label-primary); }
[data-care-panel] .care-meter { height: 4px; margin: 12px 0; border-radius: var(--dsw-radius-xs); overflow: hidden; background: var(--dsw-alias-interactive-bg-hover); }
[data-care-panel] .care-meter &gt; span { display: block; height: 100%; width: var(--care-fill); background: var(--dsw-alias-state-business-primary); }
[data-care-panel] .care-meter[data-over-limit] &gt; span { background: var(--dsw-alias-state-error-primary); }
[data-care-panel] .care-muted { color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-route { overflow-wrap: anywhere; margin-top: 8px; }
[data-care-panel] dl { display: grid; grid-template-columns: minmax(100px, 1fr) minmax(0, 1.4fr); column-gap: 12px; row-gap: 8px; margin: 12px 0 0; }
[data-care-panel] dt { color: var(--dsw-alias-label-tertiary); }
[data-care-panel] dd { margin: 0; min-width: 0; overflow-wrap: anywhere; }
[data-care-panel] .care-technical { margin-bottom: 24px; }
[data-care-panel] summary { cursor: pointer; border-radius: var(--dsw-radius-sm); }
[data-care-panel] .care-technical &gt; summary { padding: 6px 8px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] summary:hover { background: var(--dsw-alias-interactive-bg-hover); }
[data-care-panel] .care-action { border-top: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] .care-action &gt; summary { display: grid; grid-template-columns: 16px minmax(0, 1fr); align-items: start; gap: 8px; list-style: none; padding: 12px 8px; }
[data-care-panel] .care-action &gt; summary::-webkit-details-marker { display: none; }
[data-care-panel] .care-chevron { margin-top: 3px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-action[open] .care-chevron { transform: rotate(90deg); }
[data-care-panel] .care-action-title { display: flex; flex-wrap: wrap; align-items: center; gap: 8px; color: var(--dsw-alias-label-primary); }
[data-care-panel] .care-action-time { margin-left: auto; color: var(--dsw-alias-label-tertiary); font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); }
[data-care-panel] .care-action-change { display: block; margin-top: 4px; color: var(--dsw-alias-label-secondary); }
[data-care-panel] .care-action dl { margin: 0 8px 16px 32px; }
[data-care-panel] .care-badge { display: inline-flex; align-items: center; gap: 4px; font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-badge::before { content: ''; width: 5px; height: 5px; border-radius: 50%; corner-shape: round; background: currentColor; }
[data-care-panel] .care-badge[data-tone='success'] { color: var(--dsw-alias-state-success-primary); }
[data-care-panel] .care-badge[data-tone='error'] { color: var(--dsw-alias-state-error-primary); }
[data-care-panel] .care-badge[data-tone='working'] { color: var(--dsw-alias-state-business-primary); }
[data-care-panel] .care-badge[data-tone='warning'] { color: var(--dsw-alias-state-warn-label); }
[data-care-panel] .care-prompt-detail { margin: 0 8px 16px 32px; min-width: 0; }
[data-care-panel] .care-prompt-detail section { margin-top: 16px; }
[data-care-panel] .care-prompt-text { white-space: pre-wrap; overflow-wrap: anywhere; font: inherit; color: var(--dsw-alias-label-primary); padding: 10px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-bg-layer-2); }
[data-care-panel] .care-empty { margin: 0; padding: 24px 8px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] [role='alert'] { padding: 12px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-interactive-bg-hover-danger); color: var(--dsw-alias-state-error-primary); overflow-wrap: anywhere; }
[data-care-entry] [role='alert'] { position: absolute; bottom: calc(100% + 8px); right: 0; width: 240px; padding: 12px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-bg-layer-2); color: var(--dsw-alias-state-error-primary); box-shadow: var(--dsw-elevation-panel); overflow-wrap: anywhere; z-index: 1; }
[data-context-care] { display: flex; flex-wrap: wrap; align-items: center; gap: 12px; padding: 1px 4px; font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); }
[data-context-care] &gt; span { font-weight: 500; }
          </style>
          <header>
            <h3>
              预算与维护记录
            </h3>
            <button
              type="button"
            >
              刷新
            </button>
          </header>
          <main>
            <p
              class="care-empty"
            >
              尚无请求预算记录
            </p>
            <div
              class="care-section-heading"
            >
              <h4>
                维护记录
              </h4>
              <span
                class="care-muted"
              >
                21
              </span>
            </div>
            <details
              class="care-action"
              open=""
            >
              <summary>
                <svg
                  aria-hidden="true"
                  class="care-chevron"
                  data-content="905e30bd"
                  height="14"
                  viewBox="0 0 16 16"
                  width="14"
                />
                <span>
                  <span
                    class="care-action-title"
                  >
                    摘要
                    <span
                      class="care-badge"
                      data-tone="success"
                    >
                      已提交
                    </span>
                  </span>
                  <span
                    class="care-action-change"
                  >
                    30,000 → 2,000 tok
                  </span>
                  <span
                    class="care-action-change care-muted"
                  >
                    当时的触发原因未记录
                  </span>
                </span>
              </summary>
              <dl>
                <dt>
                  动作编号
                </dt>
                <dd>
                  session-one-0
                </dd>
                <dt>
                  选区来源序号
                </dt>
                <dd>
                  <details>
                    <summary>
                      0 个来源记录
                    </summary>
                  </details>
                </dd>
                <dt>
                  维护前后输入估算
                </dt>
                <dd>
                  30,000 → 2,000
                </dd>
                <dt>
                  路由计价降幅 / 固定估算降幅
                </dt>
                <dd>
                  28,000 / —
                </dd>
                <dt>
                  记录状态
                </dt>
                <dd>
                  动作记录已持久化
                </dd>
              </dl>
            </details>
          </main>
          <footer>
            <span
              class="care-muted"
              role="status"
            >
              页 1 / 2
            </span>
            <div>
              <button
                disabled=""
                type="button"
              >
                较新记录
              </button>
              <button
                type="button"
              >
                更早记录
              </button>
            </div>
          </footer>
        </section>
      </div>
    </aside>
  </div>
</div>
`;

exports[`records open in the real right sidebar, remain session scoped, and leave runtime independent on display unload > selected prompt in official sidebar 1`] = `
<div>
  <div
    data-slot="root"
    style="display: contents;"
  >
    <div
      data-surface="composer"
    >
      <div
        data-surface="toolbar"
      >
        <div
          data-slot="conversation.input.right"
          style="display: contents;"
        >
          <div
            data-care-entry=""
          >
            <style>
              [data-care-panel], [data-care-entry], [data-context-care] {
  font-family: inherit;
  font-size: var(--dsh-content-font-size-secondary, 13px);
  line-height: calc(20px + var(--dsh-content-font-delta-secondary, 0px));
  font-variant-numeric: tabular-nums;
  color: var(--dsw-alias-label-secondary);
}
[data-care-entry] { display: inline-flex; align-items: center; position: relative; flex: none; }
[data-care-panel] { display: flex; flex-direction: column; height: 100%; min-height: 0; box-sizing: border-box; }
[data-care-panel] h3, [data-care-panel] h4 { margin: 0; font-size: inherit; font-weight: 500; color: var(--dsw-alias-label-primary); }
[data-care-panel] header { display: flex; align-items: center; justify-content: space-between; gap: 12px; padding: 16px; border-bottom: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] main { flex: 1; min-height: 0; overflow: auto; padding: 16px; scrollbar-width: thin; scrollbar-color: var(--dsw-alias-scrollbar-bg-l2) transparent; }
[data-care-panel] footer { display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 8px; padding: 12px 16px; border-top: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] button, [data-care-entry] button {
  display: inline-flex; align-items: center; justify-content: center; flex: none;
  gap: 6px; box-sizing: border-box; min-height: 28px; padding: 3px 10px;
  appearance: none; border: 0; border-radius: var(--dsw-radius-sm);
  background: transparent; color: var(--dsw-alias-label-secondary); font: inherit; cursor: pointer;
}
[data-care-entry] button { width: 28px; height: 28px; padding: 4px; }
[data-care-panel] button:hover:not(:disabled), [data-care-entry] button:hover { background: var(--dsw-alias-interactive-bg-hover); color: var(--dsw-alias-label-primary); }
[data-care-panel] button:active:not(:disabled), [data-care-entry] button:active { background: var(--dsw-alias-interactive-bg-active); }
[data-care-panel] button:disabled { opacity: .4; cursor: not-allowed; }
[data-care-panel] button:focus-visible, [data-care-panel] summary:focus-visible, [data-care-entry] button:focus-visible {
  outline: var(--dsw-focus-ring-width, 2px) solid var(--dsw-focus-ring-color, var(--dsw-alias-state-business-primary)); outline-offset: 2px;
}
[data-care-panel] .care-budget { padding: 16px; margin-bottom: 12px; border-radius: var(--dsw-radius-md); background: var(--dsw-alias-bg-layer-2); border: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] .care-budget-heading, [data-care-panel] .care-section-heading { display: flex; align-items: center; justify-content: space-between; gap: 12px; margin-bottom: 12px; }
[data-care-panel] .care-figures { display: flex; align-items: baseline; flex-wrap: wrap; gap: 6px; margin: 8px 0; }
[data-care-panel] .care-figures strong { font-size: calc(var(--dsh-content-font-size, 14px) + 10px); line-height: 1.4; font-weight: 500; color: var(--dsw-alias-label-primary); }
[data-care-panel] .care-meter { height: 4px; margin: 12px 0; border-radius: var(--dsw-radius-xs); overflow: hidden; background: var(--dsw-alias-interactive-bg-hover); }
[data-care-panel] .care-meter &gt; span { display: block; height: 100%; width: var(--care-fill); background: var(--dsw-alias-state-business-primary); }
[data-care-panel] .care-meter[data-over-limit] &gt; span { background: var(--dsw-alias-state-error-primary); }
[data-care-panel] .care-muted { color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-route { overflow-wrap: anywhere; margin-top: 8px; }
[data-care-panel] dl { display: grid; grid-template-columns: minmax(100px, 1fr) minmax(0, 1.4fr); column-gap: 12px; row-gap: 8px; margin: 12px 0 0; }
[data-care-panel] dt { color: var(--dsw-alias-label-tertiary); }
[data-care-panel] dd { margin: 0; min-width: 0; overflow-wrap: anywhere; }
[data-care-panel] .care-technical { margin-bottom: 24px; }
[data-care-panel] summary { cursor: pointer; border-radius: var(--dsw-radius-sm); }
[data-care-panel] .care-technical &gt; summary { padding: 6px 8px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] summary:hover { background: var(--dsw-alias-interactive-bg-hover); }
[data-care-panel] .care-action { border-top: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] .care-action &gt; summary { display: grid; grid-template-columns: 16px minmax(0, 1fr); align-items: start; gap: 8px; list-style: none; padding: 12px 8px; }
[data-care-panel] .care-action &gt; summary::-webkit-details-marker { display: none; }
[data-care-panel] .care-chevron { margin-top: 3px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-action[open] .care-chevron { transform: rotate(90deg); }
[data-care-panel] .care-action-title { display: flex; flex-wrap: wrap; align-items: center; gap: 8px; color: var(--dsw-alias-label-primary); }
[data-care-panel] .care-action-time { margin-left: auto; color: var(--dsw-alias-label-tertiary); font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); }
[data-care-panel] .care-action-change { display: block; margin-top: 4px; color: var(--dsw-alias-label-secondary); }
[data-care-panel] .care-action dl { margin: 0 8px 16px 32px; }
[data-care-panel] .care-badge { display: inline-flex; align-items: center; gap: 4px; font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-badge::before { content: ''; width: 5px; height: 5px; border-radius: 50%; corner-shape: round; background: currentColor; }
[data-care-panel] .care-badge[data-tone='success'] { color: var(--dsw-alias-state-success-primary); }
[data-care-panel] .care-badge[data-tone='error'] { color: var(--dsw-alias-state-error-primary); }
[data-care-panel] .care-badge[data-tone='working'] { color: var(--dsw-alias-state-business-primary); }
[data-care-panel] .care-badge[data-tone='warning'] { color: var(--dsw-alias-state-warn-label); }
[data-care-panel] .care-prompt-detail { margin: 0 8px 16px 32px; min-width: 0; }
[data-care-panel] .care-prompt-detail section { margin-top: 16px; }
[data-care-panel] .care-prompt-text { white-space: pre-wrap; overflow-wrap: anywhere; font: inherit; color: var(--dsw-alias-label-primary); padding: 10px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-bg-layer-2); }
[data-care-panel] .care-empty { margin: 0; padding: 24px 8px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] [role='alert'] { padding: 12px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-interactive-bg-hover-danger); color: var(--dsw-alias-state-error-primary); overflow-wrap: anywhere; }
[data-care-entry] [role='alert'] { position: absolute; bottom: calc(100% + 8px); right: 0; width: 240px; padding: 12px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-bg-layer-2); color: var(--dsw-alias-state-error-primary); box-shadow: var(--dsw-elevation-panel); overflow-wrap: anywhere; z-index: 1; }
[data-context-care] { display: flex; flex-wrap: wrap; align-items: center; gap: 12px; padding: 1px 4px; font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); }
[data-context-care] &gt; span { font-weight: 500; }
            </style>
            <button
              aria-label="预算与维护记录"
              title="在右侧栏打开预算与维护记录"
              type="button"
            >
              <svg
                aria-hidden="true"
                data-content="1f2e3820"
                fill="none"
                focusable="false"
                height="20"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                width="20"
              />
            </button>
            <button
              aria-label="提示详情与溯源"
              title="在右侧栏查看所有上下文照料提示"
              type="button"
            >
              <svg
                aria-hidden="true"
                data-content="8054bd6b"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                width="20"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        data-surface="status"
      >
        <div
          data-slot="conversation.composer.dock"
          style="display: contents;"
        >
          <div
            data-context-care=""
            role="status"
            title="最近一次请求准备时的负荷与保留信息量估算；不是记忆可靠性判断，也不是任务时限。"
          >
            <style>
              [data-care-panel], [data-care-entry], [data-context-care] {
  font-family: inherit;
  font-size: var(--dsh-content-font-size-secondary, 13px);
  line-height: calc(20px + var(--dsh-content-font-delta-secondary, 0px));
  font-variant-numeric: tabular-nums;
  color: var(--dsw-alias-label-secondary);
}
[data-care-entry] { display: inline-flex; align-items: center; position: relative; flex: none; }
[data-care-panel] { display: flex; flex-direction: column; height: 100%; min-height: 0; box-sizing: border-box; }
[data-care-panel] h3, [data-care-panel] h4 { margin: 0; font-size: inherit; font-weight: 500; color: var(--dsw-alias-label-primary); }
[data-care-panel] header { display: flex; align-items: center; justify-content: space-between; gap: 12px; padding: 16px; border-bottom: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] main { flex: 1; min-height: 0; overflow: auto; padding: 16px; scrollbar-width: thin; scrollbar-color: var(--dsw-alias-scrollbar-bg-l2) transparent; }
[data-care-panel] footer { display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 8px; padding: 12px 16px; border-top: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] button, [data-care-entry] button {
  display: inline-flex; align-items: center; justify-content: center; flex: none;
  gap: 6px; box-sizing: border-box; min-height: 28px; padding: 3px 10px;
  appearance: none; border: 0; border-radius: var(--dsw-radius-sm);
  background: transparent; color: var(--dsw-alias-label-secondary); font: inherit; cursor: pointer;
}
[data-care-entry] button { width: 28px; height: 28px; padding: 4px; }
[data-care-panel] button:hover:not(:disabled), [data-care-entry] button:hover { background: var(--dsw-alias-interactive-bg-hover); color: var(--dsw-alias-label-primary); }
[data-care-panel] button:active:not(:disabled), [data-care-entry] button:active { background: var(--dsw-alias-interactive-bg-active); }
[data-care-panel] button:disabled { opacity: .4; cursor: not-allowed; }
[data-care-panel] button:focus-visible, [data-care-panel] summary:focus-visible, [data-care-entry] button:focus-visible {
  outline: var(--dsw-focus-ring-width, 2px) solid var(--dsw-focus-ring-color, var(--dsw-alias-state-business-primary)); outline-offset: 2px;
}
[data-care-panel] .care-budget { padding: 16px; margin-bottom: 12px; border-radius: var(--dsw-radius-md); background: var(--dsw-alias-bg-layer-2); border: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] .care-budget-heading, [data-care-panel] .care-section-heading { display: flex; align-items: center; justify-content: space-between; gap: 12px; margin-bottom: 12px; }
[data-care-panel] .care-figures { display: flex; align-items: baseline; flex-wrap: wrap; gap: 6px; margin: 8px 0; }
[data-care-panel] .care-figures strong { font-size: calc(var(--dsh-content-font-size, 14px) + 10px); line-height: 1.4; font-weight: 500; color: var(--dsw-alias-label-primary); }
[data-care-panel] .care-meter { height: 4px; margin: 12px 0; border-radius: var(--dsw-radius-xs); overflow: hidden; background: var(--dsw-alias-interactive-bg-hover); }
[data-care-panel] .care-meter &gt; span { display: block; height: 100%; width: var(--care-fill); background: var(--dsw-alias-state-business-primary); }
[data-care-panel] .care-meter[data-over-limit] &gt; span { background: var(--dsw-alias-state-error-primary); }
[data-care-panel] .care-muted { color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-route { overflow-wrap: anywhere; margin-top: 8px; }
[data-care-panel] dl { display: grid; grid-template-columns: minmax(100px, 1fr) minmax(0, 1.4fr); column-gap: 12px; row-gap: 8px; margin: 12px 0 0; }
[data-care-panel] dt { color: var(--dsw-alias-label-tertiary); }
[data-care-panel] dd { margin: 0; min-width: 0; overflow-wrap: anywhere; }
[data-care-panel] .care-technical { margin-bottom: 24px; }
[data-care-panel] summary { cursor: pointer; border-radius: var(--dsw-radius-sm); }
[data-care-panel] .care-technical &gt; summary { padding: 6px 8px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] summary:hover { background: var(--dsw-alias-interactive-bg-hover); }
[data-care-panel] .care-action { border-top: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] .care-action &gt; summary { display: grid; grid-template-columns: 16px minmax(0, 1fr); align-items: start; gap: 8px; list-style: none; padding: 12px 8px; }
[data-care-panel] .care-action &gt; summary::-webkit-details-marker { display: none; }
[data-care-panel] .care-chevron { margin-top: 3px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-action[open] .care-chevron { transform: rotate(90deg); }
[data-care-panel] .care-action-title { display: flex; flex-wrap: wrap; align-items: center; gap: 8px; color: var(--dsw-alias-label-primary); }
[data-care-panel] .care-action-time { margin-left: auto; color: var(--dsw-alias-label-tertiary); font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); }
[data-care-panel] .care-action-change { display: block; margin-top: 4px; color: var(--dsw-alias-label-secondary); }
[data-care-panel] .care-action dl { margin: 0 8px 16px 32px; }
[data-care-panel] .care-badge { display: inline-flex; align-items: center; gap: 4px; font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-badge::before { content: ''; width: 5px; height: 5px; border-radius: 50%; corner-shape: round; background: currentColor; }
[data-care-panel] .care-badge[data-tone='success'] { color: var(--dsw-alias-state-success-primary); }
[data-care-panel] .care-badge[data-tone='error'] { color: var(--dsw-alias-state-error-primary); }
[data-care-panel] .care-badge[data-tone='working'] { color: var(--dsw-alias-state-business-primary); }
[data-care-panel] .care-badge[data-tone='warning'] { color: var(--dsw-alias-state-warn-label); }
[data-care-panel] .care-prompt-detail { margin: 0 8px 16px 32px; min-width: 0; }
[data-care-panel] .care-prompt-detail section { margin-top: 16px; }
[data-care-panel] .care-prompt-text { white-space: pre-wrap; overflow-wrap: anywhere; font: inherit; color: var(--dsw-alias-label-primary); padding: 10px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-bg-layer-2); }
[data-care-panel] .care-empty { margin: 0; padding: 24px 8px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] [role='alert'] { padding: 12px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-interactive-bg-hover-danger); color: var(--dsw-alias-state-error-primary); overflow-wrap: anywhere; }
[data-care-entry] [role='alert'] { position: absolute; bottom: calc(100% + 8px); right: 0; width: 240px; padding: 12px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-bg-layer-2); color: var(--dsw-alias-state-error-primary); box-shadow: var(--dsw-elevation-panel); overflow-wrap: anywhere; z-index: 1; }
[data-context-care] { display: flex; flex-wrap: wrap; align-items: center; gap: 12px; padding: 1px 4px; font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); }
[data-context-care] &gt; span { font-weight: 500; }
            </style>
            <span
              style="color: var(--dsw-alias-state-business-primary);"
            >
              疲劳度: 40% (正常)
            </span>
            <span
              style="color: var(--dsw-alias-state-success-secondary);"
            >
              唤醒值: 60% (较高)
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      data-slot="conversation.chat.node"
      style="display: contents;"
    >
      <div
        data-context-care-notice=""
        data-context-care-seq="4"
        style="border-left: 2px solid var(--dsw-alias-border-l3, rgba(127,127,127,.35)); background: var(--dsw-alias-bg-secondary, rgba(127,127,127,.06)); border-radius: var(--dsw-radius-md, 6px); padding: 8px 12px; margin: 8px 0px;"
      >
        <div
          style="display: flex; align-items: baseline; gap: 10px; flex-wrap: wrap; margin-bottom: 6px;"
        >
          <span
            style="font-size: var(--dsh-content-font-size-secondary, 13px); font-weight: 600; color: var(--dsw-alias-label-secondary);"
          >
            上下文照料 · 状态
          </span>
        </div>
        <div
          style="font-size: var(--dsh-content-font-size, 14px); line-height: 22px; color: var(--dsw-alias-label-primary); white-space: pre-wrap; word-break: break-word;"
        >
          Original notice
        </div>
        <button
          style="font: inherit; color: var(--dsw-alias-label-secondary); background: transparent; border: 0px; cursor: pointer; margin-top: 6px;"
          type="button"
        >
          详情与溯源
        </button>
      </div>
    </div>
    <aside
      data-surface="right-sidebar"
    >
      <div
        data-slot="sidebar.right.pane.tab"
        style="display: contents;"
      >
        <section
          aria-label="提示详情与溯源"
          data-care-panel=""
        >
          <style>
            [data-care-panel], [data-care-entry], [data-context-care] {
  font-family: inherit;
  font-size: var(--dsh-content-font-size-secondary, 13px);
  line-height: calc(20px + var(--dsh-content-font-delta-secondary, 0px));
  font-variant-numeric: tabular-nums;
  color: var(--dsw-alias-label-secondary);
}
[data-care-entry] { display: inline-flex; align-items: center; position: relative; flex: none; }
[data-care-panel] { display: flex; flex-direction: column; height: 100%; min-height: 0; box-sizing: border-box; }
[data-care-panel] h3, [data-care-panel] h4 { margin: 0; font-size: inherit; font-weight: 500; color: var(--dsw-alias-label-primary); }
[data-care-panel] header { display: flex; align-items: center; justify-content: space-between; gap: 12px; padding: 16px; border-bottom: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] main { flex: 1; min-height: 0; overflow: auto; padding: 16px; scrollbar-width: thin; scrollbar-color: var(--dsw-alias-scrollbar-bg-l2) transparent; }
[data-care-panel] footer { display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 8px; padding: 12px 16px; border-top: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] button, [data-care-entry] button {
  display: inline-flex; align-items: center; justify-content: center; flex: none;
  gap: 6px; box-sizing: border-box; min-height: 28px; padding: 3px 10px;
  appearance: none; border: 0; border-radius: var(--dsw-radius-sm);
  background: transparent; color: var(--dsw-alias-label-secondary); font: inherit; cursor: pointer;
}
[data-care-entry] button { width: 28px; height: 28px; padding: 4px; }
[data-care-panel] button:hover:not(:disabled), [data-care-entry] button:hover { background: var(--dsw-alias-interactive-bg-hover); color: var(--dsw-alias-label-primary); }
[data-care-panel] button:active:not(:disabled), [data-care-entry] button:active { background: var(--dsw-alias-interactive-bg-active); }
[data-care-panel] button:disabled { opacity: .4; cursor: not-allowed; }
[data-care-panel] button:focus-visible, [data-care-panel] summary:focus-visible, [data-care-entry] button:focus-visible {
  outline: var(--dsw-focus-ring-width, 2px) solid var(--dsw-focus-ring-color, var(--dsw-alias-state-business-primary)); outline-offset: 2px;
}
[data-care-panel] .care-budget { padding: 16px; margin-bottom: 12px; border-radius: var(--dsw-radius-md); background: var(--dsw-alias-bg-layer-2); border: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] .care-budget-heading, [data-care-panel] .care-section-heading { display: flex; align-items: center; justify-content: space-between; gap: 12px; margin-bottom: 12px; }
[data-care-panel] .care-figures { display: flex; align-items: baseline; flex-wrap: wrap; gap: 6px; margin: 8px 0; }
[data-care-panel] .care-figures strong { font-size: calc(var(--dsh-content-font-size, 14px) + 10px); line-height: 1.4; font-weight: 500; color: var(--dsw-alias-label-primary); }
[data-care-panel] .care-meter { height: 4px; margin: 12px 0; border-radius: var(--dsw-radius-xs); overflow: hidden; background: var(--dsw-alias-interactive-bg-hover); }
[data-care-panel] .care-meter &gt; span { display: block; height: 100%; width: var(--care-fill); background: var(--dsw-alias-state-business-primary); }
[data-care-panel] .care-meter[data-over-limit] &gt; span { background: var(--dsw-alias-state-error-primary); }
[data-care-panel] .care-muted { color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-route { overflow-wrap: anywhere; margin-top: 8px; }
[data-care-panel] dl { display: grid; grid-template-columns: minmax(100px, 1fr) minmax(0, 1.4fr); column-gap: 12px; row-gap: 8px; margin: 12px 0 0; }
[data-care-panel] dt { color: var(--dsw-alias-label-tertiary); }
[data-care-panel] dd { margin: 0; min-width: 0; overflow-wrap: anywhere; }
[data-care-panel] .care-technical { margin-bottom: 24px; }
[data-care-panel] summary { cursor: pointer; border-radius: var(--dsw-radius-sm); }
[data-care-panel] .care-technical &gt; summary { padding: 6px 8px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] summary:hover { background: var(--dsw-alias-interactive-bg-hover); }
[data-care-panel] .care-action { border-top: .5px solid var(--dsw-alias-border-l2); }
[data-care-panel] .care-action &gt; summary { display: grid; grid-template-columns: 16px minmax(0, 1fr); align-items: start; gap: 8px; list-style: none; padding: 12px 8px; }
[data-care-panel] .care-action &gt; summary::-webkit-details-marker { display: none; }
[data-care-panel] .care-chevron { margin-top: 3px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-action[open] .care-chevron { transform: rotate(90deg); }
[data-care-panel] .care-action-title { display: flex; flex-wrap: wrap; align-items: center; gap: 8px; color: var(--dsw-alias-label-primary); }
[data-care-panel] .care-action-time { margin-left: auto; color: var(--dsw-alias-label-tertiary); font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); }
[data-care-panel] .care-action-change { display: block; margin-top: 4px; color: var(--dsw-alias-label-secondary); }
[data-care-panel] .care-action dl { margin: 0 8px 16px 32px; }
[data-care-panel] .care-badge { display: inline-flex; align-items: center; gap: 4px; font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); color: var(--dsw-alias-label-tertiary); }
[data-care-panel] .care-badge::before { content: ''; width: 5px; height: 5px; border-radius: 50%; corner-shape: round; background: currentColor; }
[data-care-panel] .care-badge[data-tone='success'] { color: var(--dsw-alias-state-success-primary); }
[data-care-panel] .care-badge[data-tone='error'] { color: var(--dsw-alias-state-error-primary); }
[data-care-panel] .care-badge[data-tone='working'] { color: var(--dsw-alias-state-business-primary); }
[data-care-panel] .care-badge[data-tone='warning'] { color: var(--dsw-alias-state-warn-label); }
[data-care-panel] .care-prompt-detail { margin: 0 8px 16px 32px; min-width: 0; }
[data-care-panel] .care-prompt-detail section { margin-top: 16px; }
[data-care-panel] .care-prompt-text { white-space: pre-wrap; overflow-wrap: anywhere; font: inherit; color: var(--dsw-alias-label-primary); padding: 10px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-bg-layer-2); }
[data-care-panel] .care-empty { margin: 0; padding: 24px 8px; color: var(--dsw-alias-label-tertiary); }
[data-care-panel] [role='alert'] { padding: 12px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-interactive-bg-hover-danger); color: var(--dsw-alias-state-error-primary); overflow-wrap: anywhere; }
[data-care-entry] [role='alert'] { position: absolute; bottom: calc(100% + 8px); right: 0; width: 240px; padding: 12px; border-radius: var(--dsw-radius-sm); background: var(--dsw-alias-bg-layer-2); color: var(--dsw-alias-state-error-primary); box-shadow: var(--dsw-elevation-panel); overflow-wrap: anywhere; z-index: 1; }
[data-context-care] { display: flex; flex-wrap: wrap; align-items: center; gap: 12px; padding: 1px 4px; font-size: calc(var(--dsh-content-font-size-secondary, 13px) - 1px); }
[data-context-care] &gt; span { font-weight: 500; }
          </style>
          <header>
            <h3>
              提示详情与溯源
            </h3>
            <button
              type="button"
            >
              刷新
            </button>
          </header>
          <main>
            <p
              class="care-muted"
            >
              正文来自当时保存的消息或请求决策。来源事件与请求派发分开列出；没有旧审计时不推测触发原因。
            </p>
            <details
              class="care-action"
              open=""
            >
              <summary>
                <span
                  class="care-chevron"
                >
                  ›
                </span>
                <span>
                  <span
                    class="care-action-title"
                  >
                    上下文照料 · 状态
                     · #4
                  </span>
                  <span
                    class="care-action-change"
                  >
                    会话提示
                  </span>
                </span>
              </summary>
              <div
                class="care-prompt-detail"
              >
                <pre
                  class="care-prompt-text"
                >
                  &lt;context-care&gt;exact session-one prompt 20&lt;/context-care&gt;
                </pre>
                <dl>
                  <dt>
                    发布来源
                  </dt>
                  <dd>
                    dsh-context-care:state
                  </dd>
                  <dt>
                    记录时间
                  </dt>
                  <dd>
                    1970/1/1 08:00:00
                  </dd>
                  <dt>
                    记录编号
                  </dt>
                  <dd>
                    session-one-prompt-20
                  </dd>
                </dl>
                <section>
                  <h4>
                    触发依据
                  </h4>
                  <pre
                    class="care-prompt-text"
                  >
                    {
  "trigger": "budget-state"
}
                  </pre>
                </section>
                <section>
                  <h4>
                    关联请求
                  </h4>
                  <pre
                    class="care-prompt-text"
                  >
                    [
  {
    "callId": "call-one",
    "dispatched": false
  }
]
                  </pre>
                </section>
                <section>
                  <h4>
                    来源事件
                  </h4>
                  <details>
                    <summary>
                      #2 · assistant/message
                    </summary>
                    <pre
                      class="care-prompt-text"
                    >
                      verified source
                    </pre>
                  </details>
                </section>
              </div>
            </details>
          </main>
          <footer>
            <span
              role="status"
            >
              页 2 / 2
            </span>
            <div>
              <button
                type="button"
              >
                较新记录
              </button>
              <button
                disabled=""
                type="button"
              >
                更早记录
              </button>
            </div>
          </footer>
        </section>
      </div>
    </aside>
  </div>
</div>
`;
